[gd_scene load_steps=3 format=3 uid="uid://le36d86k7re2"]

[ext_resource type="Script" path="res://Combat/CombatObject.gd" id="1_2lhkp"]
[ext_resource type="Theme" uid="uid://f3cwprpras7p" path="res://UI/theme.tres" id="1_rbrhj"]

[node name="CombatObject" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -37.0
offset_right = 182.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 50
script = ExtResource("1_2lhkp")

[node name="Box1" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_rbrhj")

[node name="MarginContainer" type="MarginContainer" parent="Box1"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="NameStatsSeparator" type="VBoxContainer" parent="Box1/MarginContainer"]
layout_mode = 2

[node name="UnitName" type="Label" parent="Box1/MarginContainer/NameStatsSeparator"]
layout_mode = 2
text = "Test"
horizontal_alignment = 1

[node name="TextHPSeparator" type="HBoxContainer" parent="Box1/MarginContainer/NameStatsSeparator"]
layout_mode = 2

[node name="HealthPointsText" type="Label" parent="Box1/MarginContainer/NameStatsSeparator/TextHPSeparator"]
layout_mode = 2
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthPointsStack" type="VBoxContainer" parent="Box1/MarginContainer/NameStatsSeparator/TextHPSeparator"]
layout_mode = 2
size_flags_vertical = 4

[node name="HealthPoints" type="HBoxContainer" parent="Box1/MarginContainer/NameStatsSeparator/TextHPSeparator/HealthPointsStack"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Box2" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_rbrhj")

[node name="MarginContainer" type="MarginContainer" parent="Box2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="NameStatsSeparator" type="VBoxContainer" parent="Box2/MarginContainer"]
layout_mode = 2

[node name="UnitName" type="Label" parent="Box2/MarginContainer/NameStatsSeparator"]
layout_mode = 2
text = "Test"
horizontal_alignment = 1

[node name="TextHPSeparator" type="HBoxContainer" parent="Box2/MarginContainer/NameStatsSeparator"]
layout_mode = 2

[node name="HealthPointsText" type="Label" parent="Box2/MarginContainer/NameStatsSeparator/TextHPSeparator"]
layout_mode = 2
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthPointsStack" type="VBoxContainer" parent="Box2/MarginContainer/NameStatsSeparator/TextHPSeparator"]
layout_mode = 2
size_flags_vertical = 4

[node name="HealthPoints" type="HBoxContainer" parent="Box2/MarginContainer/NameStatsSeparator/TextHPSeparator/HealthPointsStack"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
